--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://infullstack.com/reactjsmemorygame"
+    "deployprod": "aws s3 sync build/ s3://infullstack.com/reactjsmemorygame",
+    "deploystaging": "aws s3 sync build/ s3://staging.infullstack.com/reactjsmemorygame"
   },
   "eslintConfig": {
     "extends": "react-app"
